test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_name.rs
use clapi::macros::*;

#[command(name=123)]
fn app(){}

fn main(){}