test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_name.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_name.rs:3:1
  |
3 | #[command(name=123)]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `name` must be a string literal
